<resources>
    <string name="app_name">Covid Care</string>
    <string name="login_try_again">check the phone number</string>
    <string name="notification_title">Proxim is active</string>
    <string name="notification_title_error">Proxim is not active</string>
    <string name="notification_text_bluetooth_disabled">You need to enable Bluetooth to make Proxim work correctly</string>
    <string name="notification_text_location_disabled">You need to enable Location Services to make Proxim work correctly</string>
    <string name="notification_text_battery_saver_enabled">You need to disable Battery Saver to make Proxim work correctly</string>
    <string name="notification_text_paused">Application is paused. Don\'t forget to resume it.</string>
    <string name="notification_action_resume">Resume</string>
    <string name="notification_text_resumed">Application is running and anonymously monitoring nearby phones.</string>
    <string name="notification_action_pause">Pause</string>
    <string name="notification_action_enable_bluetooth">Enable Bluetooth</string>
    <string name="notification_action_enable_location">Enable Location Services</string>
    <string name="notification_action_disable_battery_saver">Disable Battery Saver</string>
    <string name="foreground_service_channel">Background service</string>
    <string name="foreground_service_alert_channel">Important notifications</string>
    <string name="help_toolbar_title">Help</string>
    <string name="go_back_button">Back to app</string>
    <string name="enable_bluetooth_button">Enable Bluetooth</string>
    <string name="enable">Enable</string>
    <string name="bt_disabled_title">Enable Bluetooth</string>
    <string name="bt_disabled_desc">With Bluetooth disabled, Proxim cannot create a list of nearby phones.\n\nEnable it by pressing \"Enable Bluetooth\".</string>
    <string name="location_disabled_title">Enable Location Services</string>
    <string name="location_disabled_desc">Even though we don\'t use Location data, enable them in order for Bluetooth to work properly by using the button \"Enable Location Service\".</string>
    <string name="enable_location_button">Enable Location Services</string>
    <string name="bt_location_disabled_title">Enable Bluetooth and Location Services</string>
    <string name="bt_location_disabled_desc">With Bluetooth and Location Services disabled, Proxim cannot create a list of phones nearby.\n\nEven though we don\'t use Location data, please enable both services in order for Bluetooth to work properly by using the button \u201cEnable BT and Location Services\".</string>
    <string name="enable_bt_location_button">Enable BT and Location Services</string>
    <string name="dashboard_title_running">Proxim is active</string>
    <string name="dashboard_title_paused">Proxim is paused</string>
    <string name="dashboard_body">Application is running in the background and monitoring the surroundings. Please do not force stop the application. Keep Bluetooth enabled and use your phone as usual.</string>
    <string name="dashboard_body_paused">Application is now paused and is not collecting any data about your surroundings.\n\nEnable data collection and keep yourself and others safe. Don\'t forget to do that especially when leaving your home.</string>
    <string-array name="txPower_array">
        <item>UltraLow</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string-array name="rxtxMode_array">
        <item>Low Power</item>
        <item>Balanced</item>
        <item>Low Latency</item>
    </string-array>
    <string name="dashboard_secondary">In case you are tested positive, we will contact you using your phone number %s. We will ask you to send us an anonymised list of phones which can be found under My data.</string>
    <string name="pause_app">Pause Proxim</string>
    <string name="start_app">Start Proxim</string>
    <string name="error_ble_unsupported">Your device does not support Bluetooth LE</string>
    <string name="permission_onboarding_title">Proxim needs Bluetooth to function properly</string>
    <string name="permission_onboarding_desc">Bluetooth is part of Location Services. That\'s why we ask for permission to use Location tracking after you press \"Enable\". Confirm both requests so that the application can function properly.</string>
    <string name="permission_onboarding_desc_2">You are the only one who can upload the collected data, and only when asked to do so by a public health officer.</string>
    <string name="permission_onboarding_desc_minor">You don\'t have to worry: the application is not tracking your location nor does it save it.</string>
    <string name="permission_onboarding_toolbar_title">Permissions</string>
    <string name="login_toolbar_title">Phone number</string>
    <string name="login_desc">Enter your phone number that will be used by a public health officer only when somebody from your surroundings has tested positive for coronavirus.</string>
    <string name="login_statement"><![CDATA[I agree that the Ministry of Health can use this phone number and the collected data about meeting other application users to carry our epidemiological investigation.]]></string>
    <string name="login_phone_number_input">Phone number (mandatory)</string>
    <string name="login_finish_activation">Continue</string>
    <string name="login_code_input">Verification code</string>
    <string name="login_phone_input_error">Invalid phone number (must contain country prefix)</string>
    <string name="login_code_input_error">Verification code was not entered correctly.</string>
    <string name="login_network_error">Error contacting server. Check network connection.</string>
    <string name="login_too_many_attempts_error">Too many phone number verification requests. You can try again in a couple of hours.</string>
    <string name="login_number_already_in_use_error">You cannot use this number.\nPhone number %1$s cannot be used because you have used it for activation on a different device.</string>
    <string name="login_session_expired">Verification code has expired. Check phone number and request a new verification code.</string>
    <string name="menu_help">Help</string>
    <string name="my_data_title">My data</string>
    <string name="my_data_description">This is a list of signal measurements of nearby phones with Proxim in the past %d days. Data does not contain coordinates nor any other personal data. You are the only one who can send the data to the public health officers.</string>
    <string name="my_data_tab_all_title">All</string>
    <string name="my_data_tab_critical_title">Close encounters</string>
    <string name="my_data_column_date">Date</string>
    <string name="my_data_column_time">Time</string>
    <string name="my_data_column_tuid">ID</string>
    <string name="my_data_column_rssi">RSSI</string>
    <string name="my_data_column_txPower">Tx Power</string>
    <string name="my_data_column_distance">Distance</string>
    <string name="about_title">About app</string>
    <string name="about_intro">This application was created under the Covid19CZ initiative. We have developed it with focus on privacy protection so that we wanted to use it ourselves as well. Your data is stored only on your device and your location history cannot be determined from it. Thank you for using the application and we believe that together we will overcome this epidemic.\n\nProxim team</string>
    <string name="permission_rationale_title">The permission for location tracking needs to be granted to allow the application work properly.</string>
    <string name="permission_rationale_body">You can find more information on Android Developer\'s Site https://developer.android.com/guide/topics/connectivity/bluetooth#Permissions</string>
    <string name="permission_rationale_settings">Settings</string>
    <string name="permission_rationale_dismiss">Dismiss</string>
    <string name="welcome_help">How does it work?</string>
    <string name="welcome_activation">Continue to activation</string>
    <string name="welcome_description"><![CDATA[The application will be monitoring your surroundings continuously and will record all other phones of users with the Proxim application you encounter.<br/><br/>If any of them test positive for coronavirus, a public health officer will call you.<br/><br/>If you test positive, the public health office will contact all the other application users you encountered.<br/><br/>]]></string>
    <string name="welcome_title">Thanks to Proxim you will keep yourself and others safe</string>
    <string name="login_verify">Verify</string>
    <string name="login_verification_code">Verification code</string>
    <string name="login_phone_number_sms_sent">We sent a verification code to phone number %s.</string>
    <string name="login_phone_sms_timeout">Verification code will expire in %1$s.</string>
    <string name="login_code_read_automatically">Verification code was automatically filled from the SMS.</string>
    <string name="contacts_title">Contacts</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer_text">This software provides only forecasts of occupancy of selected places. The actual occupancy and occurence of people at places may differ from these forecasts as they are based on past statistical data. The authors provide no guarantee in any way to the accuracy of these forecasts. This software does not provide or substitute in any way medical or health advice or consultation.</string>
    <string name="disclaimer_checkbox_text">I read and understand.</string>
    <string name="disclaimer_button_text">Start</string>
    <string name="dialog_consent_title">Are you satisfied with the recording?</string>
    <string name="dialog_consent_button1">Play Again</string>
    <string name="dialog_consent_button2">Yes</string>
    <string name="dialog_consent_button3">No</string>
    <string name="dialog_disease_title">Diagnosed with the following conditions? (if any)</string>
    <string name="dialog_disease_button1">Chronic Lung Disease</string>
    <string name="dialog_disease_button2">Diabetes</string>
    <string name="dialog_disease_button3">Heart Disease</string>
    <string name="dialog_disease_button4">Obesity / Adipositas</string>
    <string name="dialog_disease_button5">CONTINUE</string>
    <string name="dialog_symptoms_title">Please tell us the symptoms (if any)</string>
    <string name="dialog_symptoms_button1">Fever</string>
    <string name="dialog_symptoms_button2">Feeling Tired or Weak</string>
    <string name="dialog_symptoms_button3">Diarreah</string>
    <string name="dialog_symptoms_button4">Headache</string>
    <string name="dialog_symptoms_button5">Lost of Taste or Smell</string>
    <string name="dialog_symptoms_button6">CONTINUE</string>
    <string name="dialog_closecontact_title">Had close contact with a confirmed COVID case?</string>
    <string name="dialog_closecontact_text1">\u2022 Living in the same apartment</string>
    <string name="dialog_closecontact_text2">\u2022 Direct, physical contact (touching, shaking hands, kissing, body fluids)</string>
    <string name="dialog_closecontact_text3">\u2022 Face-to-face contact, or within 1.5 meters, for longer than 15 minutes</string>
    <string name="dialog_closecontact_button1">Yes</string>
    <string name="dialog_closecontact_button2">No</string>
    <string name="record_screen_title_ar">الخطوات</string>
    <string name="record_screen_text1_ar">1. مد يدك اليمنى حاملا الهاتف للأعلى واستعد للسعال مرتين متاليتين</string>
    <string name="record_screen_text2_ar">2. اضغط مع الإستمرار على زر التسجيل</string>
    <string name="record_screen_text3_ar">3. الآن قم بالسعال</string>
    <string name="record_screen_text4_ar">4. اترك زر التسجيل</string>
    <string name="record_screen_button1_ar">ابدء الآن</string>
</resources>